# glowing-engine

./: ALUPipe.cpp  ALUPipe.h  ArithmeticInstruction.cpp  ArithmeticInstruction.h  CMakeLists.txt  ControlInstructions.cpp  ControlInstructions.h  InOrderALUPipe.cpp  InOrderALUPipe.h  Instruction.cpp  Instruction.h  InstructionSet.cpp  InstructionSet.h  InstructionWrapper.h  Memory.cpp  Memory.h  MemoryInstructions.cpp  MemoryInstructions.h  PipelinedProcessor.cpp  PipelinedProcessor.h  Processor.cpp  Processor.h  RegisterFile.cpp  RegisterFile.h  SuperScalarProcessor.cpp  SuperScalarProcessor.h  main.cpp
test_in/: out_1  out_2  out_3  out_4  out_5  test_1  test_2  test_3  test_4  test_5  test_sign
